[gd_scene load_steps=3 format=3 uid="uid://oyccr31kv2rw"]

[ext_resource type="Script" path="res://Draggable.gd" id="1_t66wv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_triwc"]
size = Vector2(100, 100)

[node name="Draggable" type="Area2D"]
script = ExtResource("1_t66wv")

[node name="CollisionBounds" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_triwc")
debug_color = Color(0.895679, 0.302272, 0.264744, 0.42)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
